feat: outコマンド実装
